<InlinedAnswerFlashcard/> - stopped border from jumping

--- a/frontend/pages/courses_id_review/components/ProblemBeingSolved/index.css
+++ b/frontend/pages/courses_id_review/components/ProblemBeingSolved/index.css
@@ -33,6 +33,7 @@
         &[data-answered='right']{
           box-shadow: $green-answer-box-shadow;
           border: $green-answer-border;
+          border-width: 2px;
           background: rgb(68, 245, 149) !important;
           color: rgb(10, 80, 42) !important;
         }
